// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-0" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.yml/,
            use: [{
                loader: 'another-loader'
            }, {
                loader: 'yml-loader'
            }]
        }]
    }
}

"
`;

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-1" data 1`] = `
"export default {
    module: {
        rules: [{
            test: /\\\\.yml/,
            use: [{
                loader: 'yml-loader'
            }]
        }]
    }
}
"
`;

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-2" data 1`] = `
"export default {
    module: {
        rules: []
    }
}
"
`;

exports[`removeJsonLoader transforms correctly using "removeJsonLoader-3" data 1`] = `
"export default {
    module: {
        rules: []
    }
}

"
`;
